[package]
name = "mlb_games"
version = "0.1.0"
authors = ["Devin Smith <smith@designateddriver.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["bundled"]
